--- a/roadmap.html
+++ b/roadmap.html
@@ -9,54 +9,27 @@
 <body>
   <header>
     <img src="PoorCoin.png" alt="PoorCoin Logo" class="logo">
-    <h1>PoorCoin (POOR)</h1>
+    <h1>PoorCoin (POOR) — Roadmap</h1>
     <nav>
       <a href="index.html">About</a>
       <a href="roadmap.html">Roadmap</a>
       <a href="faq.html">FAQ</a>
       <a href="whitepaper.html">Whitepaper</a>
+      <a href="https://pancakeswap.finance/swap?outputCurrency=0x4B336AABbB057503aD2a588201D56F0e6EadC281" target="_blank" class="btn">Buy</a>
     </nav>
   </header>
 
   <main>
-    <h2>Roadmap 2025</h2>
-    <section class="card">
-      <h3>Q1 2025</h3>
+    <section class="roadmap">
+      <h2>Our Roadmap</h2>
       <ul>
-        <li>Стартиране на PoorCoin и уебсайта</li>
-        <li>Създаване на Telegram & Twitter общност</li>
-        <li>Добавяне на ликвидност в PancakeSwap</li>
+        <li><strong>Phase 1:</strong> Token creation, website launch, initial liquidity on PancakeSwap.</li>
+        <li><strong>Phase 2:</strong> Growing the community — Telegram, Twitter/X, and marketing push.</li>
+        <li><strong>Phase 3:</strong> Apply for CoinGecko & CoinMarketCap listings.</li>
+        <li><strong>Phase 4:</strong> Partnerships, more liquidity, and first exchange listings.</li>
+        <li><strong>Phase 5:</strong> Ecosystem expansion and community-driven utilities.</li>
       </ul>
     </section>
-
-    <section class="card">
-      <h3>Q2 2025</h3>
-      <ul>
-        <li>Листинг в DEX инструменти (Dextools, Poocoin)</li>
-        <li>Първи маркетинг кампании</li>
-        <li>Увеличаване на общността</li>
-      </ul>
-    </section>
-
-    <section class="card">
-      <h3>Q3 2025</h3>
-      <ul>
-        <li>Подаване на заявки в CoinGecko и CoinMarketCap</li>
-        <li>Партньорства с DeFi проекти</li>
-        <li>Burn събитие (ако се гласува от общността)</li>
-      </ul>
-    </section>
-
-    <section class="card">
-      <h3>Q4 2025</h3>
-      <ul>
-        <li>Разширяване на ликвидността</li>
-        <li>Листинг в централизирани борси (CEX)</li>
-        <li>Новини за следващи разработки</li>
-      </ul>
-    </section>
-
-    <p><a href="index.html">⬅ Back to Homepage</a></p>
   </main>
 
   <footer>
