--- a/faq.html
+++ b/faq.html
@@ -9,44 +9,34 @@
 <body>
   <header>
     <img src="PoorCoin.png" alt="PoorCoin Logo" class="logo">
-    <h1>PoorCoin (POOR)</h1>
+    <h1>PoorCoin (POOR) — FAQ</h1>
     <nav>
       <a href="index.html">About</a>
       <a href="roadmap.html">Roadmap</a>
       <a href="faq.html">FAQ</a>
       <a href="whitepaper.html">Whitepaper</a>
+      <a href="https://pancakeswap.finance/swap?outputCurrency=0x4B336AABbB057503aD2a588201D56F0e6EadC281" target="_blank" class="btn">Buy</a>
     </nav>
   </header>
 
   <main>
-    <h2>Frequently Asked Questions (FAQ)</h2>
+    <section class="faq">
+      <h2>Frequently Asked Questions</h2>
+      <h3>1. What is PoorCoin?</h3>
+      <p>PoorCoin (POOR) is a community-driven meme token on the BNB Smart Chain.</p>
 
-    <section class="card">
-      <h3>1. Какво е PoorCoin?</h3>
-      <p>PoorCoin (POOR) е децентрализиран meme токен, създаден за общността на BNB Smart Chain.</p>
+      <h3>2. How can I buy POOR?</h3>
+      <p>You can trade POOR on PancakeSwap using the official contract address.</p>
+
+      <h3>3. What is the total supply?</h3>
+      <p>The total supply is <strong>1,000,000,000 POOR</strong>.</p>
+
+      <h3>4. Is liquidity locked?</h3>
+      <p>Liquidity was added on PancakeSwap. Updates about locking will be shared in the Telegram group.</p>
+
+      <h3>5. Where can I follow updates?</h3>
+      <p>Join our <a href="https://t.me/poorcoin_bsc" target="_blank">Telegram channel</a> and follow us on Twitter/X.</p>
     </section>
-
-    <section class="card">
-      <h3>2. Как да купя PoorCoin?</h3>
-      <p>Може да купите POOR директно чрез PancakeSwap. Използвайте официалния контракт адрес за да избегнете измами.</p>
-    </section>
-
-    <section class="card">
-      <h3>3. Колко е общото предлагане?</h3>
-      <p>Общо предлагане: 1,000,000,000 POOR.</p>
-    </section>
-
-    <section class="card">
-      <h3>4. Има ли екип зад PoorCoin?</h3>
-      <p>PoorCoin е общностен проект – поддържан и развиван от хората, които вярват в него.</p>
-    </section>
-
-    <section class="card">
-      <h3>5. Кога ще бъде добавен в CoinGecko/CoinMarketCap?</h3>
-      <p>Вече сме подали заявки. След като има достатъчна ликвидност и активност, очакваме одобрение.</p>
-    </section>
-
-    <p><a href="index.html">⬅ Back to Homepage</a></p>
   </main>
 
   <footer>
