--- a/index.html
+++ b/index.html
@@ -4,166 +4,180 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PoorCoin (POOR) — Official Website</title>
-  <meta name="description" content="PoorCoin (POOR) — a community-driven meme token on BNB Smart Chain (BEP-20).">
+  <meta name="description" content="PoorCoin (POOR) — community-driven meme token on BNB Smart Chain." />
   <link rel="icon" href="PoorCoin.png" type="image/png" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="brand" href="index.html">
+        <img src="PoorCoin.png" alt="PoorCoin Logo" class="logo" />
+        <div class="brand-txt">
+          <strong>PoorCoin</strong><span>(POOR)</span>
+        </div>
+      </a>
 
-  <!-- Header / Nav -->
-  <header class="container header">
-    <a class="brand" href="index.html">
-      <img src="PoorCoin.png" alt="PoorCoin Logo" class="logo" />
-      <div class="brand-text">
-        <h1>PoorCoin <span class="ticker">(POOR)</span></h1>
-        <p class="subtitle">The community-driven token on BNB Smart Chain</p>
-      </div>
-    </a>
-
-    <nav class="nav">
-      <a href="#about">About</a>
-      <a href="#tokenomics">Tokenomics</a>
-      <a href="#links">Links</a>
-      <a href="whitepaper.html">Whitepaper</a>
-      <a href="roadmap.html">Roadmap</a>
-      <a href="faq.html">FAQ</a>
-      <a id="buyTop" class="btn buy">Buy</a>
-    </nav>
+      <nav class="nav">
+        <a href="#about">About</a>
+        <a href="#tokenomics">Tokenomics</a>
+        <a href="#links">Links</a>
+        <a href="whitepaper.html">Whitepaper</a>
+        <a href="roadmap.html">Roadmap</a>
+        <a href="faq.html">FAQ</a>
+        <a class="btn buy" id="buyTop" target="_blank" rel="noopener">Buy</a>
+      </nav>
+      <button class="nav-toggle" id="navToggle" aria-label="Toggle menu">☰</button>
+    </div>
   </header>
 
   <main class="container">
-
-    <!-- About -->
-    <section id="about" class="card grid-2">
-      <div class="stack">
-        <h2>Built by and for the community</h2>
+    <!-- HERO / ABOUT -->
+    <section id="about" class="card hero">
+      <div class="hero-col hero-text">
+        <h1>Built by and for the community</h1>
         <p>
-          PoorCoin (POOR) is a decentralized meme token created by and for the community.
-          We keep things fun, transparent, and fair while we experiment, learn and grow together.
+          PoorCoin (POOR) is a decentralized meme token created by and for the community.  
+          We keep things fun, transparent, and fair while we experiment, learn, and grow together.
         </p>
-        <div class="pills">
-          <span class="pill">Chain: <strong>BNB Smart Chain (BEP-20)</strong></span>
-          <span class="pill">Ticker: <strong>POOR</strong></span>
-          <span class="pill">Total supply: <strong>1,000,000,000</strong></span>
+
+        <div class="chips">
+          <span class="chip">Chain: BNB Smart Chain (BEP-20)</span>
+          <span class="chip">Ticker: POOR</span>
+          <span class="chip">Total supply: 1,000,000,000</span>
         </div>
 
-        <div class="actions">
-          <a id="pancBtn1" class="btn primary">Buy on PancakeSwap</a>
-          <a id="dexBtn" class="btn ghost">View on DEXTools</a>
+        <div class="cta-row">
+          <a class="btn primary" id="pancBtn1" target="_blank" rel="noopener">Buy on PancakeSwap</a>
+          <a class="btn faint" id="dextBtn" target="_blank" rel="noopener">View on DEXTools</a>
         </div>
       </div>
 
-      <aside class="stats">
-        <h3>Quick stats</h3>
-        <div class="stat">
-          <span>Liquidity (est.)</span>
-          <strong>12,000,000 POOR + 0.011 BNB</strong>
+      <aside class="hero-col hero-stats">
+        <div class="stat-card">
+          <div class="stat-label">Quick stats</div>
+          <div class="stat-line"><span>Liquidity (est.)</span><strong>12,000,000 POOR + 0.011 BNB</strong></div>
+          <div class="stat-line"><span>In circulation (wallet)</span><strong>~695,089,465 POOR</strong></div>
+          <a class="link-out" id="bscscanLink" target="_blank" rel="noopener">View contract on BscScan</a>
         </div>
-        <div class="stat">
-          <span>In circulation (wallet)</span>
-          <strong>~695,089,465 POOR</strong>
-        </div>
-        <a id="bscBtn" class="btn ghost block">View contract on BscScan</a>
       </aside>
     </section>
 
-    <!-- Tokenomics -->
-    <section id="tokenomics" class="card">
-      <h2>Tokenomics</h2>
-      <div class="grid-3">
-        <div class="mini">
-          <span>Total supply</span>
-          <strong>1,000,000,000 POOR</strong>
-        </div>
-        <div class="mini">
-          <span>Chain</span>
-          <strong>BNB Smart Chain</strong>
-        </div>
-        <div class="mini">
-          <span>Ticker</span>
-          <strong>POOR</strong>
-        </div>
-      </div>
-    </section>
-
-    <!-- Links / Contract -->
-    <section id="links" class="card grid-2">
-      <div class="stack">
-        <h2>Quick Links</h2>
-        <div class="links">
-          <a class="chip" href="https://t.me/poorcoin_bsc" target="_blank" rel="noopener">Telegram</a>
-          <a class="chip" href="https://twitter.com/intent/user?screen_name=poorcoin" target="_blank" rel="noopener">X (Twitter)</a>
-          <a id="dexBtn2" class="chip" target="_blank" rel="noopener">DEXTools</a>
-        </div>
+    <!-- TOKENOMICS -->
+    <section id="tokenomics" class="grid">
+      <div class="card">
+        <h3>Tokenomics</h3>
+        <ul class="list">
+          <li><span>Total supply</span><strong>1,000,000,000 POOR</strong></li>
+          <li><span>Chain</span><strong>BNB Smart Chain</strong></li>
+          <li><span>Ticker</span><strong>POOR</strong></li>
+        </ul>
       </div>
 
-      <aside class="contract card-lite">
+      <div class="card">
         <h3>Smart Contract</h3>
-        <p class="muted">Always verify the address on BscScan before trading.</p>
-        <div class="contract-row">
-          <code id="contractText">0x4B3336AABbB057593a02a588210D56Fe0E6aCdC281</code>
+        <p class="muted">Always verify the address on BscScan before any transaction.</p>
+        <div class="address-wrap">
+          <code id="contractTxt">PASTE_CONTRACT_ADDRESS_HERE</code>
+          <button class="btn small" id="copyBtn">Copy</button>
+          <button class="btn small" id="mmBtn">Add to MetaMask</button>
         </div>
-        <div class="row-gap">
-          <button id="copyBtn" class="btn ghost">Copy</button>
-          <button id="addMetaBtn" class="btn ghost">Add to MetaMask</button>
-          <a id="pancBtn2" class="btn primary">Buy on PancakeSwap</a>
-        </div>
-      </aside>
+      </div>
     </section>
 
+    <!-- LINKS -->
+    <section id="links" class="card">
+      <h3>Quick Links</h3>
+      <div class="chip-row">
+        <a class="chip link" href="https://t.me/poorcoin_bsc" target="_blank" rel="noopener">Telegram</a>
+        <a class="chip link" href="https://twitter.com/yourtwitter" target="_blank" rel="noopener">X (Twitter)</a>
+        <a class="chip link" id="pancBtn2" target="_blank" rel="noopener">PancakeSwap</a>
+        <a class="chip link" id="dextBtn2" target="_blank" rel="noopener">DEXTools</a>
+        <a class="chip link" id="bscscanBtn" target="_blank" rel="noopener">BscScan</a>
+      </div>
+    </section>
   </main>
 
-  <footer class="container footer">
-    <p>© 2025 PoorCoin | Built by the community</p>
+  <footer class="site-footer">
+    <div class="container">
+      <p>© 2025 PoorCoin | Built by the community</p>
+    </div>
   </footer>
 
   <script>
-    // ==== EDIT ТУК: ако някога смениш адреса, подмени само тази константа ====
+    // =======================
+    //  EDIT ТУК: постави ПЪЛНИЯ contract address (започва с 0x…)
+    // =======================
     const CONTRACT = '0x4B3336AABbB057593a02a588210D56Fe0E6aCdC281';
-    // ========================================================================
 
-    // Елементи
+    // DOM refs
     const buyTop   = document.getElementById('buyTop');
-    const panc1    = document.getElementById('pancBtn1');
-    const panc2    = document.getElementById('pancBtn2');
-    const dex1     = document.getElementById('dexBtn');
-    const dex2     = document.getElementById('dexBtn2');
-    const bsc      = document.getElementById('bscBtn');
+    const pancBtn1 = document.getElementById('pancBtn1');
+    const pancBtn2 = document.getElementById('pancBtn2');
+    const dextBtn  = document.getElementById('dextBtn');
+    const dextBtn2 = document.getElementById('dextBtn2');
+    const bscscanLink = document.getElementById('bscscanLink');
+    const bscscanBtn  = document.getElementById('bscscanBtn');
+    const contractTxt = document.getElementById('contractTxt');
     const copyBtn  = document.getElementById('copyBtn');
-    const addMeta  = document.getElementById('addMetaBtn');
-    const ctext    = document.getElementById('contractText');
+    const mmBtn    = document.getElementById('mmBtn');
+    const navToggle = document.getElementById('navToggle');
 
-    // Линкове (генерират се от CONTRACT)
-    const bscUrl  = `https://bscscan.com/token/${CONTRACT}`;
-    const dexUrl  = `https://www.dextools.io/app/en/bnb/pair-explorer?address=${CONTRACT}`;
-    const pancUrl = `https://pancakeswap.finance/swap?outputCurrency=${CONTRACT}`;
+    // Fill contract text
+    if (CONTRACT && CONTRACT.startsWith('0x')) {
+      contractTxt.textContent = CONTRACT;
+    }
 
-    // Присвояване
-    [panc1, panc2, buyTop].forEach(el => el.addEventListener('click', () => window.open(pancUrl, '_blank')));
-    [dex1, dex2].forEach(el => el.setAttribute('href', dexUrl));
-    bsc && bsc.addEventListener('click', () => window.open(bscUrl, '_blank'));
+    // Build URLs
+    const pancakeUrl = CONTRACT && CONTRACT.startsWith('0x')
+      ? `https://pancakeswap.finance/swap?outputCurrency=${CONTRACT}`
+      : `https://pancakeswap.finance`;
 
-    // Copy
-    copyBtn.addEventListener('click', async () => {
-      await navigator.clipboard.writeText(CONTRACT);
-      copyBtn.textContent = 'Copied!';
-      setTimeout(() => copyBtn.textContent = 'Copy', 1200);
+    const dextUrl = CONTRACT && CONTRACT.startsWith('0x')
+      ? `https://www.dextools.io/app/en/bnb/pair-explorer?address=${CONTRACT}`
+      : `https://www.dextools.io`;
+
+    const bscUrl = CONTRACT && CONTRACT.startsWith('0x')
+      ? `https://bscscan.com/token/${CONTRACT}`
+      : `https://bscscan.com`;
+
+    // Attach URLs
+    [buyTop, pancBtn1, pancBtn2].forEach(a => a && (a.href = pancakeUrl));
+    [dextBtn, dextBtn2].forEach(a => a && (a.href = dextUrl));
+    if (bscscanLink) bscscanLink.href = bscUrl;
+    if (bscscanBtn)  bscscanBtn.href  = bscUrl;
+
+    // Copy contract
+    copyBtn?.addEventListener('click', async () => {
+      try {
+        await navigator.clipboard.writeText(CONTRACT);
+        copyBtn.textContent = 'Copied!';
+        setTimeout(() => (copyBtn.textContent = 'Copy'), 1500);
+      } catch (e) { alert('Copy failed'); }
     });
 
     // Add to MetaMask
-    addMeta.addEventListener('click', async () => {
-      if (!window.ethereum) { alert('Open in a browser with MetaMask.'); return; }
+    mmBtn?.addEventListener('click', async () => {
+      if (!window.ethereum) { alert('MetaMask not detected'); return; }
       try {
-        await ethereum.request({
+        await window.ethereum.request({
           method: 'wallet_watchAsset',
           params: {
             type: 'ERC20',
-            options: { address: CONTRACT, symbol: 'POOR', decimals: 18, image: location.origin + '/PoorCoin.png' }
+            options: {
+              address: CONTRACT,
+              symbol: 'POOR',
+              decimals: 18,
+              image: location.origin + '/PoorCoin.png'
+            }
           }
         });
-      } catch (e) { console.error(e); }
+      } catch(e) { console.error(e); }
+    });
+
+    // Mobile nav
+    navToggle?.addEventListener('click', () => {
+      document.querySelector('.nav')?.classList.toggle('open');
     });
   </script>
 </body>
